[workspace]
members = [
    "crates/umbra-core",
    "crates/umbra-rpc",
    "crates/umbra-sweep",
    "crates/umbra-storage",
    "crates/umbra-api",
    "bins/umbra-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Endale Dinh <endadinh@gmail.com>"]
