[package]
name = "umbra-client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-system-interface = { workspace = true }

umbra-core = { path = "../umbra-core" }
umbra-rpc = { path = "../umbra-rpc" }
umbra-sweep = { path = "../umbra-sweep" }
umbra-storage = { path = "../umbra-storage" }

curve25519-dalek = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true, optional = true }

[features]
default = []
logging = ["tracing"]
