[package]
name = "umbra-core"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true, optional = true }

[features]
default = []
logging = ["tracing"]
