[package]
name = "umbra-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

anyhow = { workspace = true }

tracing = { workspace = true, optional = true }

[features]
default = []
logging = ["tracing"]
